--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,9 @@ header>a:not(.active):nth-child(3){
 #activity ul li .extratoggle:checked + .extra{
 	display: block;
 }
+#activity ul li img{
+	margin-right: 0.5em;
+}
 #activity ul ul{
 	border-radius: 0.15rem;
 }
@@ -362,6 +365,7 @@ header>a:not(.active):nth-child(3){
 }
 .project{
 	display: block;
+	position: relative;
 	height: 21vh;
 	min-height: 15rem;
 	padding:0;
@@ -423,6 +427,9 @@ header>a:not(.active):nth-child(3){
 	-moz-osx-font-smoothing: none;
 	-webkit-font-smoothing: none;
 }
+.project#dino .poster>p>img{
+	filter: none;
+}
 .project#signage{
 	background: rgb(175, 30, 255) url('/img/signage.svg') no-repeat center/cover;
 	color: #fff;
@@ -432,7 +439,7 @@ header>a:not(.active):nth-child(3){
 	background: #44A8EB url('/img/blog.svg') no-repeat center/cover;
 	color: #fff;
 }
-.project>a{
+.projects .poster{
 	position:relative;
 	display:block;
 	height:100%;
@@ -441,7 +448,13 @@ header>a:not(.active):nth-child(3){
 	text-shadow:inherit;
 	font-size:3em;
 }
-.project>a>span:first-child{
+.projects .poster>p>img{
+	display:inline-block;
+	margin: 0 0.5rem;
+	filter: invert();
+	height: 1em;
+}
+.projects .poster>span:first-child{
 	display: none;
 	position:absolute;
 	left:0;
@@ -449,7 +462,7 @@ header>a:not(.active):nth-child(3){
 	font-size:3em;
 	color:rgba(255,255,255,0.2);
 }
-.project>a>h3{
+.projects .poster>h3{
 	position:absolute;
 	width:100%;
 	top:50%;
@@ -458,10 +471,10 @@ header>a:not(.active):nth-child(3){
 	margin: 0;
 	transition: top 250ms;
 }
-.project:hover>a> p + h3{
-	top:1em;
+.project:hover>.poster> p + h3{
+	top:3rem;
 }
-.project>a>p{
+.projects .poster>p{
 	position: absolute;
 	bottom:-100%;
 	opacity: 0;
@@ -474,11 +487,11 @@ header>a:not(.active):nth-child(3){
 	margin:0;
 	transition: bottom 250ms, opacity 250ms;
 }
-.project:hover>a>p{
-	bottom:25%;
+.project:hover>.poster>p{
+	bottom:calc(50% - 2.5rem);
 	opacity: 1;
 }
-.project#kahoot>a>h3{
+.project#kahoot>.poster>h3{
 	-webkit-text-stroke: 1px black;
 	text-shadow:
        3px 3px 0 #000,
@@ -486,6 +499,32 @@ header>a:not(.active):nth-child(3){
       1px -1px 0 #000,
       -1px 1px 0 #000,
        1px 1px 0 #000;
+}
+.project>.github{
+	z-index: 1;
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 3rem;
+	height: 3rem;
+	padding: 0.5rem 0.5rem 2rem 2rem;
+	background: linear-gradient(215deg, rgba(0,0,0,0.25) 0%, transparent 50%);
+	opacity: 0;
+	transition: opacity 250ms;
+}
+.project:hover>.github{
+	opacity:1;
+}
+.project>.github>img{
+	width: 100%;
+	height: 100%;
+	filter: invert();
+}
+#refresh-projects>img{
+	filter: invert(1);
+	width: 100%;
+	position: relative;
+	top: -0.2em;
 }
 
 .rounded-button{
