--- a/style.beta.css
+++ b/style.beta.css
@@ -19,6 +19,9 @@ a {
   color: inherit;
   text-decoration: none; /* no underline */
 }
+p {
+  font-size: 1.25em;
+}
 p > a:link {
   color: rgb(112,146,190);
 }
@@ -30,9 +33,18 @@ h1,h2,h3,h4,h5,h6{
 }
 h1{
 	font-weight:100;
+  font-size: 3em;
 }
 h2{
 	font-weight:300;
+  font-size: 2.5em;
+}
+h3{
+  font-size: 2em;
+}
+hr {
+  border: none;
+  border-bottom: white solid 1px;
 }
 
 /*
@@ -48,20 +60,77 @@ h2{
 .text-center {
   text-align: center;
 }
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
 
 /*
 	BUTTONS
 */
 .btn{
 	display: inline-block;
-	padding: 0.5rem;
-	margin: 0.1rem;
+  font-size: 1.25em;
+	padding: 0.5em;
+	margin: 0 0.5rem 0.5rem 0;
 	cursor: pointer;
-	box-shadow: rgba(0,0,0,0);
+  border-radius: 0.5em;
+	box-shadow: inset 0 0 0 1.1em rgba(255,255,255,0);
 	transition: box-shadow 250ms;
 }
 .btn:hover{
-	box-shadow: rgba(0,0,0,0.1) 0.25rem 0.25rem 0.5rem 0;
+	box-shadow: inset 0 0 0 1.1em rgba(255,255,255,0.25);
+}
+
+/*
+	COLOURS
+*/
+
+.c-grey-bg{
+	background:#727b88;
+}
+.c-grey{
+	color:#727b88;
+}
+.c-mild-bg{
+	background:#7295cd;
+}
+.c-mild{
+	color:#7295cd;
+}
+.c-blue-bg{
+	background:rgb(0,162,232);
+}
+.c-blue{
+	color:rgb(0,162,232);
+}
+.c-purple-bg{
+	background:rgb(163,73,164);
+}
+.c-purple{
+	color:rgb(163,73,164);
+}
+.c-octocat-bg{
+	background: #6e5494;
+}
+.c-octocat{
+	color: #6e5494;
+}
+.c-blurple-bg{
+	background: #7289da;
+}
+.c-blurple{
+	color: #7289da;
+}
+.c-gmail-bg{
+	background: #ea4335;
+}
+.c-gmail{
+	color: #ea4335;
 }
 
 /*
@@ -108,9 +177,7 @@ nav > .nav-item.active {
 
 .pfp {
   border-radius: 1em;
-  width: 20vw;
-  min-width: 128px;
-  max-width: 256px;
+  width: 12em;
   height: auto;
   margin-bottom: 1em;
 }
@@ -134,8 +201,8 @@ article, section {
   position: relative;
   display: block;
   width: 20vw;
-  min-width: 16em;
-  max-width: 32em;
+  min-width: 12em;
+  max-width: 18em;
   height: 20vh;
   min-height: 9em;
   max-height: 18em;
@@ -170,4 +237,8 @@ article, section {
   background: rgb(112,146,190);
 	box-shadow: rgba(0,0,0,0.25) 0.25rem 0.25rem 0.5rem 0;
   border-radius: 0.8em;
+}
+
+.credits {
+  margin-bottom: 0.8em;
 }
