--- a/style.beta.css
+++ b/style.beta.css
@@ -289,7 +289,7 @@ article, section, aside {
   flex-direction: row;
   border-radius: 0.9em;
 }
-.carousel > * {
+.carousel > div, .carousel > a {
   position: relative;
   display: block;
   width: 20vw;
@@ -305,10 +305,18 @@ article, section, aside {
 .carousel > *:not(:last-child) {
   margin-right: 1em;
 }
-.carousel.carousel-end-promo > *:last-child {
+.carousel.carousel-end-promo > div:last-child, .carousel.carousel-end-promo > a:last-child {
   display: block;
   max-width: unset;
   flex-grow: 1;
+}
+.carousel > img {
+  height: 20vh;
+  min-height: 9em;
+  max-height: 18em;
+  max-width: 30vh;
+  object-fit: cover;
+  border-radius: 1em;
 }
 .carousel .info {
   position: absolute;
