--- a/style.beta.css
+++ b/style.beta.css
@@ -91,7 +91,7 @@ hr {
 }
 
 /*
-	BUTTONS
+	MENU ITEMS
 */
 .btn{
 	display: inline-block;
@@ -106,6 +106,13 @@ hr {
 }
 .btn:hover{
 	box-shadow: inset 0 0 0 1.1em rgba(255,255,255,0.25);
+}
+.spacer {
+  display: inline-block;
+  margin: 0 1em 0.4em 0.6em;
+  border-left: 1px solid #fff;
+  border-top: 1px
+  solid #fff;
 }
 
 /*
