--- a/style.css
+++ b/style.css
@@ -26,10 +26,10 @@ a {
 p {
   font-size: 1.25em;
 }
-p > a:link {
+p > a {
   color: rgb(112,146,190);
 }
-p > a:link:hover {
+p > a:hover {
   font-weight: bold;
 }
 h1,h2,h3,h4,h5,h6{
