--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ p {
   font-size: 1.25em;
 }
 p a, blockquote a, ul a, ol a {
-  color: rgb(112,146,190);
+  color: rgb(153 198 255);
 }
 p a:hover, blockquote a:hover, ul a:hover, ol a:hover {
   font-weight: bold;
@@ -462,6 +462,9 @@ article, section, aside {
   }
   .post > .post-header {
     border-bottom-color: #000;
+  }
+  p a, blockquote a, ul a, ol a {
+    color: rgb(58, 78, 105);
   }
   
   .btn{
