--- a/style.css
+++ b/style.css
@@ -144,6 +144,13 @@ blockquote::after {
 .hero .btn:hover{
 	box-shadow: inset 0 0 0 1.1em rgba(255,255,255,0.25);
 }
+.hero h2 .btn {
+  position: relative;
+  top: -0.5em;
+  font-size: 1rem;
+  margin: 0;
+  padding: 0.3em;
+}
 .spacer {
   display: inline-block;
   margin: 0 1em 0.4em 0.6em;
