--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ blockquote::after {
 }
 .flex-row, .flex-col {
   display: flex;
+  gap: 0.5em;
   flex-wrap: wrap;
 }
 .flex-row {
@@ -128,7 +129,6 @@ blockquote::after {
 	display: inline-block;
   font-size: 1.25em;
 	padding: 0.5em;
-	margin: 0 0.5rem 0.5rem 0;
 	cursor: pointer;
   border: white solid 1px;
   border-radius: 0.5em;
@@ -156,7 +156,7 @@ blockquote::after {
 }
 .spacer {
   display: inline-block;
-  margin: 0 1em 0.4em 0.6em;
+  margin: 0 0.5em 0 0.5em;
   border-left: 1px solid #fff;
   border-top: 1px
   solid #fff;
