Add more visual hierarchy to featured articles and projects

--- a/style.css
+++ b/style.css
@@ -216,10 +216,10 @@ input[type=checkbox], input[type=radio] {
 */
 
 .c-grey-bg{
-	background:#727b88;
+	background:#8c9198;
 }
 .c-grey{
-	color:#727b88;
+	color:#8c9198;
 }
 .c-mild-bg{
 	background:#7295cd;
